fix: renovation price nowrap

--- a/assets/styles/blocks/faq.css
+++ b/assets/styles/blocks/faq.css
@@ -64,6 +64,7 @@
 
 .faq-item:hover .faq-item-button {
   background-color: var(--orange-color);
+  border-color: var(--orange-color);
 }
 
 .faq-item-divider {
