--- a/assets/styles/blocks/renovations.css
+++ b/assets/styles/blocks/renovations.css
@@ -87,6 +87,7 @@
   font-size: 20px;
   line-height: 36px;
   color: var(--orange-color);
+  white-space: nowrap;
 }
 
 .renovations-item-divider {
